configuring gson for serialization and deserializing application and configuring graphql